--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "nodemailer": "^6.6.2"
+    "nodemailer": "^6.6.2",
+    "emailjs-com": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.10"
