--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   },
   "homepage": "https://github.com/ANDRESPLASENCIABORJA/Iglesias-app#readme",
   "dependencies": {
+    "compression": "^1.7.4",
     "dotenv": "^10.0.0",
+    "emailjs-com": "^3.2.0",
     "express": "^4.17.1",
-    "nodemailer": "^6.6.2",
-    "emailjs-com": "^3.2.0"
+    "nodemailer": "^6.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.10"
